--- a/SublimPickAppFlask/app.yaml
+++ b/SublimPickAppFlask/app.yaml
@@ -6,8 +6,10 @@ entrypoint: gunicorn -b :$PORT main:app  # Entry point de l'application (main.py
 # accès aux APIs et services nécessaires
 env_variables:
   GOOGLE_CLOUD_PROJECT: "sublimepick1"  # ID  projet
-  BUCKET_NAME: "sublime_bucket_2024"    # Nom  Cloud Storage bucket
-  STORAGE_PATH: "data-test-api-application"  # Répertoire dans bucket
+  # BUCKET_NAME: "sublime_bucket_2024"    # Nom  Cloud Storage bucket
+  # STORAGE_PATH: "data-test-api-application"  # Répertoire dans bucket
+  BUCKET_NAME: "sublime_bucket_bis"
+  STORAGE_PATH: "10/reviews"
 
 
 handlers:
