--- a/SublimPickAppFlask/app.yaml
+++ b/SublimPickAppFlask/app.yaml
@@ -18,3 +18,9 @@ handlers:
 
   - url: /.*
     script: auto
+
+automatic_scaling:
+  min_idle_instances: 1
+  max_idle_instances: 2
+  min_pending_latency: 30s  # Augmente le temps de démarrage autorisé
+  max_pending_latency: 60s
