--- a/SublimPickAppFlask/requirements.txt
+++ b/SublimPickAppFlask/requirements.txt
@@ -109,7 +109,8 @@ graphql-core==3.2.3
 graphql-relay==3.2.0
 greenlet==3.0.3
 grpcio==1.56.2
-gunicorn==21.2.0
+#gunicorn==21.2.0
+gunicorn
 h11==0.14.0
 h5py==3.9.0
 httpcore==1.0.2
