--- a/SublimPickAppFlask/app.yaml
+++ b/SublimPickAppFlask/app.yaml
@@ -10,6 +10,7 @@ env_variables:
   # STORAGE_PATH: "data-test-api-application"  # Répertoire dans bucket
   BUCKET_NAME: "sublime_bucket_bis"
   STORAGE_PATH: "10/reviews"
+  PYTHONPATH: backend:backend/helpers
 
 
 handlers:
@@ -19,8 +20,8 @@ handlers:
   - url: /.*
     script: auto
 
-automatic_scaling:
-  min_idle_instances: 1
-  max_idle_instances: 2
-  min_pending_latency: 30s  # Augmente le temps de démarrage autorisé
-  max_pending_latency: 60s
+# automatic_scaling:
+#   min_idle_instances: 1
+#   max_idle_instances: 2
+#   min_pending_latency: 30s  # Augmente le temps de démarrage autorisé
+#   max_pending_latency: 60s
