--- a/SublimPickAppFlask/requirements.txt
+++ b/SublimPickAppFlask/requirements.txt
@@ -100,12 +100,13 @@ google-auth==2.29.0
 google-auth-oauthlib==1.0.0
 google-cloud-core==2.4.1
 google-cloud-storage==2.16.0
+#google-cloud-bigquery==3.4.0
 google-crc32c==1.5.0
 google-pasta==0.2.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
 graphene==3.3
-graphql-core==3.2.3
+graphql-core==3.2.36
 graphql-relay==3.2.0
 greenlet==3.0.3
 grpcio==1.56.2
