--- a/SublimPickAppFlask/requirements.txt
+++ b/SublimPickAppFlask/requirements.txt
@@ -1,352 +1,6 @@
-# absl-py==1.4.0
-# accelerate==0.26.1
-# aiofiles==23.2.1
-# aiohttp==3.9.1
-# aiokafka==0.10.0
-# aiosignal==1.3.1
-# alembic==1.8.1
-# altair==5.3.0
-# aniso8601==9.0.1
-# annotated-types==0.6.0
-# anyio==4.2.0
-# appdirs==1.4.4
-# argon2-cffi==23.1.0
-# argon2-cffi-bindings==21.2.0
-# arrow==1.3.0
-# asgiref==3.7.2
-# asttokens==2.2.1
-# astunparse==1.6.3
-# async-lru==2.0.4
-# async-timeout==4.0.3
-# attrs==23.1.0
-# azure-common==1.1.28
-# azure-core==1.30.1
-# azure-mgmt-core==1.4.0
-# azure-mgmt-resource==23.0.1
-# Babel==2.14.0
-# backcall==0.2.0
-# bcrypt==4.0.1
-# beautifulsoup4==4.12.3
-#bentoml==1.1.11
-# bitsandbytes==0.41.3.post2
-# bleach==6.1.0
-# blinker==1.6.2
-# blis==0.7.11
-# boto3==1.28.8
-# botocore==1.31.8
-# Brotli==1.1.0
-# build==0.10.0
-# cachetools==5.3.1
-# catalogue==2.0.10
-# cattrs==23.1.2
-# certifi==2023.5.7
-# cffi==1.16.0
-charset-normalizer==3.2.0
-# circus==0.18.0
-click==8.1.3
-click-option-group==0.5.6
-click-params==0.3.0
-# cloudpathlib==0.15.1
-# cloudpickle==2.2.1
-# colorama==0.4.6
-# coloredlogs==15.0.1
-# comm==0.1.3
-# confection==0.1.3
-# contextlib2==21.6.0
-# contourpy==1.1.0
-# cryptography==42.0.5
-cuda-python==12.3.0
-cycler==0.11.0
-cymem==2.0.8
-datasets==2.15.0
-debugpy==1.6.7
-decorator==5.1.1
-deepmerge==1.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-dill==0.3.7
-distlib==0.3.8
-distro==1.9.0
-docker==6.1.3
-docopt==0.6.2
-einops==0.7.0
-entrypoints==0.4
-evaluate==0.4.1
-executing==1.2.0
-fastapi==0.110.0
-fastapi-utils==0.2.1
-fastcore==1.5.29
-fastjsonschema==2.19.1
-filelock==3.13.1
-filetype==1.2.0
-Flask==2.3.2
-Flask-Cors==5.0.0
-# flatbuffers==23.5.26
-# fonttools==4.41.0
-# fqdn==1.5.1
-# fr-core-news-md @ https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.7.0/fr_core_news_md-3.7.0-py3-none-any.whl#sha256=f6a4fa799b1daf2a635fe55a7de6b344379dc542d54d4c490113f0bc94bed4b8
-# frozenlist==1.4.0
-# fs==2.4.16
-# fsspec==2024.3.1
-# gast==0.4.0
-# gcsfs==2024.3.1
-# gevent==24.2.1
-# geventhttpclient==2.0.2
-# ghapi==1.0.4
-# gitdb==4.0.11
-# GitPython==3.1.43
-google-api-core==2.19.0
-google-auth==2.29.0
-google-auth-oauthlib==1.0.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.16.0
-#google-cloud-bigquery==3.4.0
-google-crc32c==1.5.0
-google-pasta==0.2.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.63.0
-graphene==3.3
-graphql-core==3.2.36
-graphql-relay==3.2.0
-greenlet==3.0.3
-grpcio==1.56.2
-#gunicorn==21.2.0
+google-cloud-storage
+flask
+pandas
+matplotlib
+seaborn
 gunicorn
-h11==0.14.0
-h5py==3.9.0
-httpcore==1.0.2
-httplib2==0.19.1
-httptools==0.6.1
-httpx==0.26.0
-huggingface-hub==0.19.4
-# humanfriendly==10.0
-# idna==3.4
-# imbalanced-learn==0.11.0
-# imblearn==0.0
-# importlib-metadata==6.11.0
-# importlib-resources==5.13.0
-# inflection==0.5.1
-ipinfo==5.0.1
-ipykernel==6.25.0
-ipython==8.12.3
-ipywidgets==8.1.2
-isodate==0.6.1
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.3.2
-json5==0.9.25
-jsonpointer==2.4
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-# jupyter-events==0.10.0
-# jupyter-lsp==2.2.5
-# jupyter_client==8.3.0
-# jupyter_core==5.3.1
-# jupyter_server==2.14.0
-# jupyter_server_terminals==0.5.3
-# jupyterlab==4.1.8
-# jupyterlab_pygments==0.3.0
-# jupyterlab_server==2.27.1
-# jupyterlab_widgets==3.0.10
-# keras==2.13.1
-keyboard==0.13.5
-kiwisolver==1.4.4
-langcodes==3.3.0
-# libclang==16.0.6
-# Mako==1.3.3
-Markdown==3.4.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-# mdurl==0.1.2
-# mistune==3.0.2
-# mlflow==2.12.1
-# mlserver==1.5.0
-# mlserver-mlflow==1.5.0
-# mpmath==1.3.0
-# multidict==6.0.4
-# multiprocess==0.70.15
-# murmurhash==1.0.10
-# mypy-extensions==1.0.0
-# nbclient==0.10.0
-# nbconvert==7.16.4
-# nbformat==5.10.4
-# nest-asyncio==1.5.6
-networkx==3.2.1
-nltk==3.8.1
-notebook==7.1.3
-notebook_shim==0.2.4
-# numpy>=1.25.0
-pybind11>=2.12
-nvidia-ml-py==11.525.150
-oauthlib==3.2.2
-# opencv-contrib-python==4.8.0.74
-# opencv-python==4.8.0.74
-# openllm==0.4.41
-# openllm-client==0.4.41
-# openllm-core==0.4.41
-# opentelemetry-api==1.24.0
-# opentelemetry-exporter-otlp-proto-common==1.24.0
-# opentelemetry-exporter-otlp-proto-grpc==1.24.0
-# opentelemetry-instrumentation==0.45b0
-# opentelemetry-instrumentation-aiohttp-client==0.41b0
-# opentelemetry-instrumentation-asgi==0.45b0
-# opentelemetry-instrumentation-fastapi==0.45b0
-# opentelemetry-instrumentation-grpc==0.45b0
-# opentelemetry-proto==1.24.0
-# opentelemetry-sdk==1.24.0
-# opentelemetry-semantic-conventions==0.45b0
-# opentelemetry-util-http==0.45b0
-# opt-einsum==3.3.0
-# optimum==1.16.1
-# orjson==3.10.2
-overrides==7.7.0
-packaging==23.1
-pandas==2.0.3
-pandocfilters==1.5.1
-# parso==0.8.3
-# passlib==1.7.4
-# pathspec==0.12.1
-# pathy==0.10.2
-# pickleshare==0.7.5
-# Pillow==10.0.0
-pip-requirements-parser==32.0.1
-pip-tools==7.3.0
-pipreqs==0.5.0
-platformdirs==3.9.1
-plotly==5.22.0
-# preshed==3.0.9
-# prometheus-client==0.19.0
-# prompt-toolkit==3.0.39
-# proto-plus==1.23.0
-# protobuf==4.23.4
-# psutil==5.9.5
-# pure-eval==0.2.2
-# py-grpc-prometheus==0.8.0
-# pyarrow==14.0.1
-# pyarrow-hotfix==0.6
-# pyasn1==0.5.0
-# pyasn1-modules==0.3.0
-# pycparser==2.22
-# pycryptodome==3.20.0
-# pydantic==1.10.13
-# pydantic_core==2.10.1
-# pydeck==0.9.1
-# pygame==2.5.0
-# Pygments==2.15.1
-PyJWT==2.7.0
-PyMySQL==1.0.3
-pyparsing==2.4.7
-# pyproject_hooks==1.0.0
-# pyreadline3==3.4.1
-# python-dateutil==2.8.2
-# python-dotenv==1.0.1
-# python-json-logger==2.0.7
-# python-multipart==0.0.9
-# python-rapidjson==1.14
-# pytz==2023.3
-#pywin32==306; sys_platform == 'win32'
-#pywinpty==2.0.13
-PyYAML==6.0.1
-pyzmq==25.1.0
-querystring-parser==1.2.4
-referencing==0.35.1
-regex==2023.10.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-responses==0.18.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.0
-rpds-py==0.18.0
-rsa==4.9
-s3transfer==0.6.1
-safetensors==0.4.0
-schema==0.7.5
-scikit-learn==1.2.2
-scipy==1.11.3
-seaborn==0.13.0
-secure==0.3.0
-Send2Trash==1.8.3
-sentencepiece==0.1.99
-seqeval==1.2.2
-simple-di==0.1.5
-six==1.16.0
-smart-open==6.4.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-spacy==3.7.1
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==1.4.41
-SQLAlchemy-Utils==0.38.3
-sqlalchemy2-stubs==0.0.2a38
-sqlmodel==0.0.8
-sqlparse==0.5.0
-srsly==2.4.8
-stack-data==0.6.2
-starlette==0.36.3
-starlette_exporter==0.21.0
-streamlit==1.36.0
-style==1.1.0
-sympy==1.12
-# tenacity==8.2.3
-# tensorboard==2.13.0
-# tensorboard-data-server==0.7.1
-# tensorflow==2.13.0
-# tensorflow-estimator==2.13.0
-# tensorflow-intel==2.13.0
-# tensorflow-io-gcs-filesystem==0.31.0
-# termcolor==2.3.0
-# terminado==0.18.1
-# thinc==8.2.1
-# threadpoolctl==3.2.0
-# tinycss2==1.3.0
-tokenizers==0.15.0
-toml==0.10.2
-toolz==0.12.1
-torch==2.1.1
-torchaudio==2.1.1
-torchvision==0.16.1
-tornado==6.3.2
-tqdm==4.66.1
-traitlets==5.9.0
-transformers==4.36.2
-tritonclient==2.45.0
-typer==0.9.0
-types-python-dateutil==2.9.0.20240316
-typing_extensions==4.11.0
-# tzdata==2023.3
-# Unidecode==1.3.7
-# update==0.0.1
-# uri-template==1.3.0
-# urllib3==2.2.1
-uvicorn==0.25.0
-validators==0.18.2
-virtualenv==20.25.0
-waitress==3.0.0
-wasabi==1.1.2
-watchdog==4.0.1
-# watchfiles==0.21.0
-# wcwidth==0.2.6
-# weasel==0.3.2
-# webcolors==1.13
-# webencodings==0.5.1
-# websocket-client==1.8.0
-# websockets==12.0
-# Werkzeug==2.3.6
-# widgetsnbextension==4.0.10
-# wrapt==1.15.0
-# xgboost==2.0.2
-# xxhash==3.4.1
-# yarg==0.1.9
-# yarl==1.9.4
-zenml==0.56.4
-zipp==3.17.0
-zope.event==5.0
-zope.interface==6.3
